# English-Listen-WinUI

./: .gitignore  AGENTS.md  App.xaml  App.xaml.cs  C++_Backend_Integration_Summary.md  CONFIG_STRUCTURE_UPDATE.md  English-Listen-WinUI.csproj  English-Listen-WinUI.slnx  Final_Security_Check_Report.md  Fix_Status_Report.md  LICENSE.txt  MainWindow.xaml  MainWindow.xaml.cs  PRIVACY.md  Package.appxmanifest  RCa14772  README.md  TestSpeechSynthesis.cs  TestUpdateLogic.cs  app.manifest  english_listen.rc  english_listen.res  todo.md  update.md  update.txt  比赛演讲稿.md
Assets/: sentences.txt
Converters/: FullScreenPaddingConverter.cs
Helpers/: ExtendedSentenceHelper.cs  NativeMethods.cs  OsVersionHelper.cs  PhoneticHelper.cs  SentenceHelper.cs  SentencesData.cs  SpellCheckHelper.cs
Models/: StudyPlan.cs  UserData.cs  VoiceInfo.cs  Word.cs
NativeBackend/: CMakeLists.txt  DictationBackend.cpp  DictationBackend.h  DictationEngine.h  EnglishListenNative.h  NativeDictationExports.cpp  NativeDictationExports.h  NativeDictationWrapper.cpp  NativeDictationWrapper.h  QT6DictationBackend.cpp  QT6DictationBackend.h  TestBackend.cpp  build.bat
Properties/: launchSettings.json
Services/: BaiduTranslateService.cs  ChartService.cs  EncryptionService.cs  ModernDictationService.cs  NativeDictationService.cs  NotificationService.cs  PasswordService.cs  SecretStorageService.cs  SettingsService.cs  SpeechService.cs  TempFileHelper.cs  TranslationLibraryService.cs  UpdateService.cs  WindowsTtsService.cs
TestTempWordLibrary/: TestTempWordLibrary.csproj
TestWindowsTTS/: Program.cs
(+34 files in other folders)
